Terraform/aws-infrastructure/security.tf
resource "aws_security_group" "alb" {
  name        = "ALB-SG"
  description = "Security group for the alb"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "HTTP requests from outside(Internet)"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS from outside(Internet)"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-${var.environment}-alb-sg"
  }
}

resource "aws_security_group" "application" {
  name        = "Application-SG"
  description = "Security group for the application"
  vpc_id      = aws_vpc.main.id

  ingress {
    description     = "Accept requests form ALB"
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-${var.environment}-application-sg"
  }
}

resource "aws_security_group" "database" {
  name        = "Database-SG"
  description = "Security group for the Database"
  vpc_id      = aws_vpc.main.id

  ingress {
    description     = "Accept requests form application"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.application.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-${var.environment}-database-sg"
  }
}
